# FractalExplorer

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
controller/: CMakeLists.txt  FractalExplorerController.cpp  FractalExplorerController.hpp
model/: CMakeLists.txt  utils.hpp
model/fractals/: IFractal.hpp  JuliaFractal.cpp  JuliaFractal.hpp  MandelbrotFractal.cpp  MandelbrotFractal.hpp
model/render/: Camera.cpp  Camera.hpp  Color.hpp  GrayScaleColorScheme.cpp  GrayScaleColorScheme.hpp  IColorScheme.hpp  Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp
view/: CMakeLists.txt  QtFractalExplorerView.cpp  QtFractalExplorerView.hpp
